--- a/app/html/master/initial_page.html
+++ b/app/html/master/initial_page.html
@@ -185,13 +185,13 @@
     document.getElementById('login_passwd').addEventListener('keydown', function (event) {
       // Check if the Enter key was pressed
       if (event.key === 'Enter') {
-        event.preventDefault(); // Prevent the default form submission behavior (if any)
+        // event.preventDefault();
         submit_login(); // Call your submit function
       }
     });
 
     document.getElementById('tab-register-link').addEventListener('click', function (event) {
-      event.preventDefault();
+      // event.preventDefault();
       let registerTab = new bootstrap.Tab(document.querySelector('#tab-register'));
       registerTab.show();  // Switch to the register tab
     });
