--- a/app/html/loggedin/booking_list.html
+++ b/app/html/loggedin/booking_list.html
@@ -1,6 +1,6 @@
 {% extends "/master/logged_in.html" %}
 {% block content %}
-<div class="container pt-5">
+<div class="container pt-5 mt-5">
     <!-- Tabs for switching between Table and Calendar -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
