--- a/app/html/home/home.html
+++ b/app/html/home/home.html
@@ -5,9 +5,9 @@
   <video autoplay muted loop id="myVideo" style="filter: blur(7px);">
     <source src="/static/videos/dtr_cover_video.mp4" type="video/mp4">
   </video>
-  <div class="col-12 position-absolute text-center" data-aos="fade-up" data-aos-delay="500">
-    <img src="/static/images/apple-touch-icon.png" class="img-fluid" style="width:200px;" title="Welcome to Dog Training Revolution"><br>
-    <h1>Welcome to Dog Training Revolution</h1>
+  <div class="col-12 position-absolute text-center" data-aos="fade-up" data-aos-delay="500" style="background-color: rgba(0,0,0,0.6) !important; height: 500px; align-content: center;">
+    <img src="/static/images/apple-touch-icon.png" class="img-fluid" style="width:150px;" title="Welcome to Dog Training Revolution"><br>
+    <h1 class="mt-5">Welcome to Dog Training Revolution</h1>
     <!-- <h3 class="pb-3">Where Excellence in Puppy Training Begins</h3> -->
     <div class="row align-items-center">
       <!-- <div class="col-12" data-aos="fade-right" data-aos-anchor-placement="top-center">
