--- a/app/html/admin/classes.html
+++ b/app/html/admin/classes.html
@@ -183,8 +183,7 @@
                                 </div>
                                 <div class="form-outline mb-2">
                                     <label class="form-label" for="editproductRecurringend">End Recurrence</label>
-                                    <input type="date" id="editproductRecurringend"
-                                        class="form-control form-control-sm" />
+                                    <input type="date" id="editproductRecurringend" class="form-control form-control-sm" lang="en-GB"/>
                                 </div>
                             </div>
                         </div>
@@ -376,7 +375,7 @@
                                 <p style="font-size: xx-small;">If the item is recurring, you will need to specify an
                                     end date, for example if you have selected weekly recurring, setting an end date of
                                     01/01/2026 will allow bookings until the end date.</p>
-                                <input type="date" id="productRecurringend" class="form-control form-control-sm" />
+                                <input type="date" id="productRecurringend" class="form-control form-control-sm" lang="en-GB"/>
                             </div>
                         </div>
                     </div>
