--- a/app/html/user/pets.html
+++ b/app/html/user/pets.html
@@ -65,7 +65,7 @@
                     <div class="col-5">
                         <div class="form-outline mb-2">
                             <label class="form-label" for="editdob">DOB</label>
-                            <input type="date" id="editdob" class="form-control" />
+                            <input type="date" id="editdob" class="form-control" lang="en-GB"/>
                         </div>
                     </div>
                     <div class="col-12">
@@ -153,7 +153,7 @@
                         <div class="col-5" lang="en-GB">
                             <div class="form-outline mb-2">
                                 <label class="form-label small" for="adddob">DOB</label>
-                                <input type="date" id="adddob" class="form-control" />
+                                <input type="date" id="adddob" class="form-control" lang="en-GB"/>
                             </div>
                         </div>
                         <div class="col-12">
