--- a/app/html/master/initial_page.html
+++ b/app/html/master/initial_page.html
@@ -40,8 +40,8 @@
         <div class="collapse navbar-collapse site-text" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a href="#about" class="nav-link">Who we are</a></li>
-                <li class="nav-item"><a href="#classes" class="nav-link">Classes and workshops</a></li>
-                <li class="nav-item"><a href="#reviews" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="#services" class="nav-link">Classes and workshops</a></li>
+                <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
                 <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 <li class="nav-item"><a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mdlogin">Login</a></li>
             </ul>
